# mcp-quickserver

./: README.md  claude_desktop_config.json.example  pyproject.toml
.github/workflows/: ci.yml
src/mcpquickserver/: __init__.py  __main__.py  server.py  store.py
tests/: test_server.py  test_store.py
